--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,15 @@
 		</repository>
 		
 		<repository>
-			<id>comphenix-rep</id>
-			<name>Comphenix Repository</name>
-			<url>http://repo.comphenix.net/content/groups/public</url>
+			<id>comphenix-releases-old</id>
+			<name>Comphenix Maven Releases</name>
+			<url>http://repo.comphenix.net/content/repositories/releases/</url>
+		</repository>
+		
+		<repository>
+			<id>comphenix-releases</id>
+			<name>Comphenix Maven Releases</name>
+			<url>http://ci.shadowvolt.com/plugin/repository/everything/</url>
 		</repository>
 		
 		<repository>
@@ -105,7 +111,7 @@
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
-			<version>3.4.0</version>
+			<version>3.6.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
