--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,6 @@
 
 		<dependency>
 			<groupId>de.pro_crafting</groupId>
-			<artifactId>CommandFramework</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>de.pro_crafting</groupId>
 			<artifactId>Common</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 			<scope>provided</scope>
@@ -116,16 +109,10 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.comphenix.packetwrapper</groupId>
-			<artifactId>PacketWrapper</artifactId>
-			<version>1.7.2-R0.5</version>
-			<scope>compile</scope>
-		</dependency>
-		
-		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldguard</artifactId>
-			<version>6.0.0-SNAPSHOT</version>
+			<version>5.9</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
