--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>WorldFuscator</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -57,31 +57,7 @@
 	<repositories>
 		<repository>
 			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/content/groups/public/</url>
-		</repository>
-
-		<repository>
-			<id>postremus1996-snapshot</id>
-			<url>http://maven.myplayplanet.net</url>
-		</repository>
-		
-		<repository>
-			<id>comphenix-releases-old</id>
-			<name>Comphenix Maven Releases</name>
-			<url>http://repo.comphenix.net/content/repositories/releases/</url>
-		</repository>
-		
-		<repository>
-			<id>comphenix-releases</id>
-			<name>Comphenix Maven Releases</name>
-			<url>http://ci.shadowvolt.com/plugin/repository/everything/</url>
-		</repository>
-		
-		<repository>
-			<id>sk89q-repo</id>
-			<name>sk89q Repo</name>
-			<url>http://maven.sk89q.com/repo/</url>
-			<layout>default</layout>
+			<url>http://nexus.myplayplanet.net/content/groups/public/</url>
 		</repository>
 	</repositories>
 
