--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
 	<repositories>
 		<repository>
-			<id>bukkit-repo</id>
+			<id>playplanet</id>
 			<url>http://nexus.myplayplanet.net/content/groups/public/</url>
 		</repository>
 	</repositories>
@@ -59,8 +59,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.7.9-R0.1</version>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.7.10-R0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
@@ -91,6 +91,13 @@
 			<artifactId>worldedit</artifactId>
 			<version>5.6.3</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.pro_crafting</groupId>
+			<artifactId>regionslibrary</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
