--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
-			<version>1.8.7-R0.1-SNAPSHOT</version>
-			<type>jar</type>
+			<groupId>com.destroystokyo.paper</groupId>
+			<artifactId>paper-api</artifactId>
+			<version>1.10.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -95,11 +94,6 @@
 			<artifactId>regionslibrary</artifactId>
 			<version>0.1.4-SNAPSHOT</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-compress</artifactId>
-			<version>1.8.1</version>
 		</dependency>
 	</dependencies>
 </project>
