support wg 5 and wg 6

--- a/Core/src/main/resources/plugin.yml
+++ b/Core/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: WorldFuscator
 version: ${project.build.version}
-description: Worldfuscator plugin
+description: Worldfuscator Plugin
 website: 
 author: postremus
-main: de.pro_crafting.worldfuscator.WorldFuscator
+main: de.pro_crafting.worldfuscator.Plugin.WorldFuscator_Impl
 depend: [ProtocolLib, WorldGuard]
