--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.pro_crafting</groupId>
 	<artifactId>WorldFuscator</artifactId>
+	<packaging>pom</packaging>
 	<version>0.2.0-SNAPSHOT</version>
+	<modules>
+		<module>Core</module>
+		<module>WorldGuard-5</module>
+		<module>WorldGuard-6</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -72,13 +78,6 @@
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib-API</artifactId>
 			<version>4.0-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sk89q</groupId>
-			<artifactId>worldguard</artifactId>
-			<version>6.0.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
