--- a/Core/src/main/resources/plugin.yml
+++ b/Core/src/main/resources/plugin.yml
@@ -3,5 +3,5 @@ version: ${project.build.version}
 description: Worldfuscator Plugin
 website: 
 author: postremus
-main: de.pro_crafting.worldfuscator.Plugin.WorldFuscator_Impl
+main: de.pro_crafting.worldfuscator.Plugin.WorldFuscatorImpl
 depend: [ProtocolLib, WorldGuard]
