Add wargear specific implementation this implementation is meant to be only used on wargear fight servers Everything outside from the battlefield is not hidden the teams can see everything in their half of the field

--- a/Core/src/main/resources/plugin.yml
+++ b/Core/src/main/resources/plugin.yml
@@ -5,3 +5,4 @@ website:
 author: postremus
 main: de.pro_crafting.worldfuscator.Plugin.WorldFuscatorImpl
 depend: [ProtocolLib, WorldGuard]
+soft-depend: [WarGear]
