--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>de.pro_crafting</groupId>
   <artifactId>WorldFuscator</artifactId>
   <packaging>pom</packaging>
-  <version>0.2.0</version>
+  <version>0.2.1-SNAPSHOT</version>
   <modules>
     <module>Core</module>
     <module>WorldGuard-5</module>
