--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -4,12 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>WorldFuscator</artifactId>
-    <groupId>de.pro_crafting</groupId>
-    <version>0.2.1-SNAPSHOT</version>
+    <groupId>net.myplayplanet</groupId>
+    <version>0.2.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>Core</artifactId>
+
   <dependencies>
     <dependency>
       <groupId>org.mockito</groupId>
