--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -4,24 +4,24 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>WorldFuscator</artifactId>
-    <groupId>de.pro_crafting</groupId>
-    <version>0.2.1-SNAPSHOT</version>
+    <groupId>net.myplayplanet</groupId>
+    <version>0.2.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>WarGear</artifactId>
+
   <dependencies>
     <dependency>
-      <groupId>de.pro_crafting</groupId>
+      <groupId>net.myplayplanet</groupId>
       <artifactId>Core</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>de.pro_crafting</groupId>
-      <artifactId>WarGear</artifactId>
-      <version>0.13.0-SNAPSHOT</version>
-      <scope>provided</scope>
+      <groupId>net.myplayplanet</groupId>
+      <artifactId>WarGear-Fight</artifactId>
+      <version>0.14.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
