--- a/WorldGuard-6/pom.xml
+++ b/WorldGuard-6/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>WorldFuscator</artifactId>
-    <groupId>de.pro_crafting</groupId>
+    <groupId>net.myplayplanet</groupId>
     <version>0.2.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.pro_crafting</groupId>
+      <groupId>net.myplayplanet</groupId>
       <artifactId>Core</artifactId>
       <version>0.2.1-SNAPSHOT</version>
       <scope>compile</scope>
