--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.pro_crafting</groupId>
+
   <artifactId>WorldFuscator</artifactId>
   <packaging>pom</packaging>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>${versionstring}</version>
+
   <modules>
     <module>Core</module>
     <module>WorldGuard-5</module>
@@ -14,52 +15,19 @@
   </modules>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.number>-</project.build.number>
-    <project.build.version>${version} Build:${project.build.number}</project.build.version>
+    <projectVersion>0.2.2</projectVersion>
   </properties>
 
-  <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <verbose>true</verbose>
-          <fork>true</fork>
-          <compilerVersion>1.8</compilerVersion>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <parent>
+    <artifactId>MyPlayPlanet</artifactId>
+    <groupId>net.myplayplanet</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
   <repositories>
     <repository>
-      <id>playplanet</id>
-      <url>http://nexus.myplayplanet.net/content/groups/public/</url>
+      <id>pp-public</id>
+      <url>http://nexus.myplayplanet.net/repository/public/</url>
     </repository>
   </repositories>
 
@@ -72,16 +40,16 @@
     </dependency>
 
     <dependency>
-      <groupId>de.pro_crafting</groupId>
-      <artifactId>Common</artifactId>
-      <version>0.1.2-SNAPSHOT</version>
+      <groupId>net.myplayplanet</groupId>
+      <artifactId>BlockGenerator</artifactId>
+      <version>0.1.4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib-API</artifactId>
-      <version>4.1.0-SNAPSHOT</version>
+      <version>4.3.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -93,8 +61,8 @@
     </dependency>
 
     <dependency>
-      <groupId>de.pro_crafting</groupId>
-      <artifactId>regionslibrary</artifactId>
+      <groupId>net.myplayplanet</groupId>
+      <artifactId>Regionslibrary</artifactId>
       <version>0.1.4-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
