--- a/Core/src/main/resources/plugin.yml
+++ b/Core/src/main/resources/plugin.yml
@@ -3,6 +3,6 @@ version: ${project.build.version}
 description: Worldfuscator Plugin
 website: 
 author: postremus
-main: de.pro_crafting.worldfuscator.Plugin.WorldFuscatorImpl
+main: net.myplayplanet.worldfuscator.Plugin.WorldFuscatorImpl
 depend: [ProtocolLib]
 soft-depend: [WarGear, WorldGuard]
