--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -22,6 +22,7 @@
       <groupId>net.myplayplanet</groupId>
       <artifactId>WarGear-Fight</artifactId>
       <version>0.14.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
