--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>WorldFuscator</artifactId>
     <groupId>net.myplayplanet</groupId>
-    <version>0.2.2-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>net.myplayplanet</groupId>
       <artifactId>Core</artifactId>
-      <version>0.2.2-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -27,7 +27,7 @@
   </dependencies>
 
   <build>
-    <finalName>${parent.artifactId}-${artifactId}-${version}</finalName>
+    <finalName>${project.parent.artifactId}-${project.artifactId}-${project.version}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
