--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -5,30 +5,37 @@
   <parent>
     <artifactId>WorldFuscator</artifactId>
     <groupId>net.myplayplanet</groupId>
-    <version>0.2.2-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>WorldGuard-6</artifactId>
+  <artifactId>WorldGuard-7</artifactId>
 
   <dependencies>
     <dependency>
       <groupId>net.myplayplanet</groupId>
       <artifactId>Core</artifactId>
-      <version>0.2.2-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldguard</artifactId>
-      <version>6.0.0-SNAPSHOT</version>
+      <groupId>com.sk89q.worldguard</groupId>
+      <artifactId>worldguard-legacy</artifactId>
+      <version>7.0.0-beta-02</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sk89q.worldedit</groupId>
+      <artifactId>worldedit-bukkit</artifactId>
+      <version>7.0.0-beta-02</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>${parent.artifactId}-${artifactId}-${version}</finalName>
+    <finalName>${project.parent.artifactId}-${project.artifactId}-${project.version}</finalName>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
