--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
 
   <artifactId>WorldFuscator</artifactId>
   <packaging>pom</packaging>
-  <version>${versionstring}</version>
+  <version>0.3.0-SNAPSHOT</version>
 
   <modules>
     <module>Core</module>
-    <module>WorldGuard-5</module>
-    <module>WorldGuard-6</module>
+    <module>WorldGuard-7</module>
     <module>WarGear</module>
   </modules>
 
@@ -27,7 +26,11 @@
   <repositories>
     <repository>
       <id>pp-public</id>
-      <url>http://nexus.myplayplanet.net/repository/public/</url>
+      <url>https://nexus.myplayplanet.net/repository/public/</url>
+    </repository>
+    <repository>
+      <id>pp-thirdparty</id>
+      <url>https://nexus.myplayplanet.net/repository/myplayplanet-thirdparty/</url>
     </repository>
   </repositories>
 
@@ -54,9 +57,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldedit</artifactId>
-      <version>5.6.3</version>
+      <groupId>com.sk89q.worldedit</groupId>
+      <artifactId>worldedit-bukkit</artifactId>
+      <version>7.0.0-beta-02</version>
       <scope>provided</scope>
     </dependency>
 
