--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib-API</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>4.4.0</version>
       <scope>provided</scope>
     </dependency>
 
