--- a/Core/src/main/resources/plugin.yml
+++ b/Core/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: WorldFuscator
 version: ${project.build.version}
 description: Worldfuscator Plugin
-website:
+website: myplayplanet.net
 api-version: 1.13
 author: postremus
 main: net.myplayplanet.worldfuscator.Plugin.WorldFuscatorImpl
