--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>Core</artifactId>
+  <artifactId>WorldFuscator-Core</artifactId>
     <build>
         <plugins>
             <plugin>
