--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>WorldGuard-7</artifactId>
+  <artifactId>WorldFuscator-WorldGuard-7</artifactId>
 
   <dependencies>
     <dependency>
@@ -35,7 +35,6 @@
   </dependencies>
 
   <build>
-    <finalName>${project.parent.artifactId}-${project.artifactId}-${project.version}</finalName>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
