--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -11,6 +11,13 @@
 
   <artifactId>WorldGuard-7</artifactId>
 
+  <repositories>
+    <repository>
+      <id>pp-public</id>
+      <url>https://nexus.myplayplanet.net/repository/public/</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>net.myplayplanet</groupId>
@@ -20,16 +27,16 @@
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q.worldguard</groupId>
-      <artifactId>worldguard-legacy</artifactId>
-      <version>7.0.0-beta-02</version>
+      <groupId>com.boydti</groupId>
+      <artifactId>FastAsyncWorldEdit</artifactId>
+      <version>7.0.0</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
-      <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.0-beta-02</version>
+      <groupId>com.sk89q</groupId>
+      <artifactId>worldguard-api</artifactId>
+      <version>7.0.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
