--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,6 @@
       <id>pp-public</id>
       <url>https://nexus.myplayplanet.net/repository/public/</url>
     </repository>
-    <repository>
-      <id>pp-thirdparty</id>
-      <url>https://nexus.myplayplanet.net/repository/myplayplanet-thirdparty/</url>
-    </repository>
   </repositories>
 
   <dependencies>
@@ -57,9 +53,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
-      <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.0-beta-02</version>
+      <groupId>com.boydti</groupId>
+      <artifactId>FastAsyncWorldEdit</artifactId>
+      <version>7.0.0</version>
       <scope>provided</scope>
     </dependency>
 
