--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -27,16 +27,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.boydti</groupId>
-      <artifactId>FastAsyncWorldEdit</artifactId>
-      <version>7.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldguard-api</artifactId>
-      <version>7.0.0</version>
+      <groupId>com.sk89q.worldguard</groupId>
+      <artifactId>worldguard-core</artifactId>
+      <version>7.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
