--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,38 @@
     </dependency>
 
     <dependency>
-      <groupId>com.boydti</groupId>
-      <artifactId>FastAsyncWorldEdit</artifactId>
+      <groupId>com.sk89q.worldguard</groupId>
+      <artifactId>worldguard-core</artifactId>
+      <version>7.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sk89q</groupId>
+      <artifactId>worldguard-api</artifactId>
       <version>7.0.0</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.boydti</groupId>
+      <artifactId>fawe-api</artifactId>
+      <version>latest</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.plotsquared</groupId>
+          <artifactId>plotsquared-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>net.fabiozumbi12</groupId>
+          <artifactId>redprotect</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.primesoft</groupId>
+          <artifactId>BlocksHub</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
