--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>MyPlayPlanet</artifactId>
     <groupId>net.myplayplanet</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.14.0-SNAPSHOT</version>
   </parent>
 
   <repositories>
@@ -29,26 +29,30 @@
       <id>pp-public</id>
       <url>https://nexus.myplayplanet.net/repository/public/</url>
     </repository>
+    <repository>
+      <id>dmulloy2-repo</id>
+      <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+    </repository>
   </repositories>
 
   <dependencies>
     <dependency>
       <groupId>com.destroystokyo.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.13.2-R0.1-SNAPSHOT</version>
+      <version>1.14.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>net.myplayplanet</groupId>
       <artifactId>BlockGenerator</artifactId>
-      <version>0.1.4-SNAPSHOT</version>
-      <scope>provided</scope>
+      <version>1.14.0.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib-API</artifactId>
+      <artifactId>ProtocolLib</artifactId>
       <version>4.4.0</version>
       <scope>provided</scope>
     </dependency>
@@ -61,31 +65,17 @@
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldguard-api</artifactId>
-      <version>7.0.0</version>
+      <groupId>com.sk89q.worldedit</groupId>
+      <artifactId>worldedit-bukkit</artifactId>
+      <version>7.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.boydti</groupId>
-      <artifactId>fawe-api</artifactId>
-      <version>latest</version>
+      <groupId>com.sk89q</groupId>
+      <artifactId>worldguard-api</artifactId>
+      <version>7.0.0</version>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>com.plotsquared</groupId>
-          <artifactId>plotsquared-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>net.fabiozumbi12</groupId>
-          <artifactId>redprotect</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.primesoft</groupId>
-          <artifactId>BlocksHub</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
