--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <artifactId>WorldFuscator</artifactId>
   <packaging>pom</packaging>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>1.14.0-SNAPSHOT</version>
 
   <modules>
     <module>Core</module>
@@ -15,7 +15,7 @@
 
   <properties>
     <!-- HACK: Overwrite parents projectversion with our own -->
-    <projectVersion>${project.version}</projectVersion>
+    <projectVersion>1.14.0</projectVersion>
   </properties>
 
   <parent>
@@ -33,6 +33,10 @@
       <id>dmulloy2-repo</id>
       <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
     </repository>
+    <repository>
+      <id>worldedit</id>
+      <url>http://maven.sk89q.com/repo/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -46,28 +50,29 @@
     <dependency>
       <groupId>net.myplayplanet</groupId>
       <artifactId>BlockGenerator</artifactId>
-      <version>1.14.0.0-SNAPSHOT</version>
+      <version>1.14.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>4.4.0</version>
-      <scope>provided</scope>
+      <version>4.5.0-SNAPSHOT</version>
+      <scope>system</scope>
+    <systemPath>C:/Users/nitwe/Desktop/ProtocolLib.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>com.sk89q.worldguard</groupId>
       <artifactId>worldguard-core</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>7.0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.sk89q.worldedit</groupId>
       <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>7.0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
