--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,8 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>4.5.0-SNAPSHOT</version>
-      <scope>system</scope>
-    <systemPath>C:/Users/nitwe/Desktop/ProtocolLib.jar</systemPath>
+      <version>4.4.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
