--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>9</version>
   </parent>
 
+  <groupId>com.pro-crafting.mc</groupId>
   <artifactId>WorldFuscator</artifactId>
   <packaging>pom</packaging>
   <version>1.14.0-SNAPSHOT</version>
