--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -3,24 +3,20 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <groupId>com.pro-crafting.mc</groupId>
     <artifactId>WorldFuscator</artifactId>
-    <groupId>net.myplayplanet</groupId>
-    <version>1.14.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>WorldFuscator-WarGear</artifactId>
-  <version>${revision}</version>
-
-  <properties>
-    <projectVersion>1.14.0</projectVersion>
-  </properties>
 
   <dependencies>
+    <!-- External Dependencies -->
     <dependency>
-      <groupId>net.myplayplanet</groupId>
+      <groupId>com.pro-crafting.mc</groupId>
       <artifactId>WorldFuscator-Core</artifactId>
-      <version>1.14.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -30,22 +26,4 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.1</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
