--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -3,57 +3,36 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <groupId>com.pro-crafting.mc</groupId>
     <artifactId>WorldFuscator</artifactId>
-    <groupId>net.myplayplanet</groupId>
-    <version>1.14.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>WorldFuscator-WorldGuard-7</artifactId>
-  <version>${revision}</version>
-
-  <properties>
-    <projectVersion>1.14.0</projectVersion>
-  </properties>
-
-  <repositories>
-    <repository>
-      <id>pp-public</id>
-      <url>https://nexus.myplayplanet.net/repository/public/</url>
-    </repository>
-  </repositories>
 
   <dependencies>
+    <!-- Internal Dependencies -->
     <dependency>
-      <groupId>net.myplayplanet</groupId>
+      <groupId>com.pro-crafting.mc</groupId>
       <artifactId>WorldFuscator-Core</artifactId>
-      <version>1.14.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
+    </dependency>
+
+    <!-- External Dependencies -->
+    <dependency>
+      <groupId>com.sk89q.worldguard</groupId>
+      <artifactId>worldguard-core</artifactId>
+      <version>${version.worldguard}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.sk89q.worldguard</groupId>
-      <artifactId>worldguard-core</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
+      <artifactId>worldguard-bukkit</artifactId>
+      <version>${version.worldguard}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <build>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>3.1.0</version>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>shade</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-  </build>
 </project>
