--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 
   <groupId>com.pro-crafting.mc</groupId>
   <artifactId>WorldFuscator</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+
   <packaging>pom</packaging>
-  <version>1.14.0-SNAPSHOT</version>
 
   <scm>
     <connection>scm:git@github.com:pro-crafting/WorldFuscator.git</connection>
@@ -27,18 +28,35 @@
     <module>WarGear</module>
   </modules>
 
+  <properties>
+    <!-- Dependency Versions -->
+    <version.worldguard>7.0.2</version.worldguard>
+    <version.protocollib>4.4.0</version.protocollib>
+    <version.lombok>1.18.12</version.lombok>
+
+    <version.mockito>2.2.15</version.mockito>
+    <version.commons-io>2.5</version.commons-io>
+
+    <!-- Plugin Versions -->
+    <version.maven-shade-plugin>3.2.1</version.maven-shade-plugin>
+
+    <!-- Setting -->
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
+
   <repositories>
     <repository>
       <id>pp-public</id>
       <url>https://nexus.myplayplanet.net/repository/public/</url>
     </repository>
     <repository>
-      <id>dmulloy2-repo</id>
-      <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+      <id>sk89q-repo</id>
+      <url>https://maven.enginehub.org/repo/</url>
     </repository>
     <repository>
-      <id>worldedit</id>
-      <url>http://maven.sk89q.com/repo/</url>
+      <id>dmulloy2-repo</id>
+      <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
     </repository>
   </repositories>
 
@@ -51,45 +69,28 @@
     </dependency>
 
     <dependency>
-      <groupId>net.myplayplanet</groupId>
-      <artifactId>BlockGenerator</artifactId>
-      <version>1.14.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>4.4.0</version>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${version.lombok}</version>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sk89q.worldguard</groupId>
-      <artifactId>worldguard-core</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
-      <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldguard-api</artifactId>
-      <version>7.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>net.myplayplanet</groupId>
-      <artifactId>Regionslibrary</artifactId>
-      <version>0.1.4-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>${version.maven-shade-plugin}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
