--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
         <!-- External Dependencies -->
         <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>${version.spigot-api}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>${version.protocollib}</version>
