--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
         <!-- External Dependencies -->
         <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>${version.spigot-api}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.pro-crafting.mc</groupId>
             <artifactId>WorldFuscator-Core</artifactId>
             <version>${project.parent.version}</version>
