--- a/pom.xml
+++ b/pom.xml
@@ -1,95 +1,89 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.pro-crafting</groupId>
-    <artifactId>pc-parent</artifactId>
-    <version>9</version>
-  </parent>
+    <parent>
+        <groupId>com.pro-crafting</groupId>
+        <artifactId>pc-parent</artifactId>
+        <version>9</version>
+    </parent>
 
-  <groupId>com.pro-crafting.mc</groupId>
-  <artifactId>WorldFuscator</artifactId>
-  <packaging>pom</packaging>
-  <version>1.14.0-SNAPSHOT</version>
+    <groupId>com.pro-crafting.mc</groupId>
+    <artifactId>WorldFuscator</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
-  <scm>
-    <connection>scm:git@github.com:pro-crafting/WorldFuscator.git</connection>
-    <url>https://github.com/pro-crafting/WorldFuscator</url>
-    <developerConnection>scm:git:git@github.com:pro-crafting/WorldFuscator.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+    <packaging>pom</packaging>
 
-  <modules>
-    <module>Core</module>
-    <module>WorldGuard-7</module>
-    <module>WarGear</module>
-  </modules>
+    <scm>
+        <connection>scm:git@github.com:pro-crafting/WorldFuscator.git</connection>
+        <url>https://github.com/pro-crafting/WorldFuscator</url>
+        <developerConnection>scm:git:git@github.com:pro-crafting/WorldFuscator.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
-  <repositories>
-    <repository>
-      <id>pp-public</id>
-      <url>https://nexus.myplayplanet.net/repository/public/</url>
-    </repository>
-    <repository>
-      <id>dmulloy2-repo</id>
-      <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
-    </repository>
-    <repository>
-      <id>worldedit</id>
-      <url>http://maven.sk89q.com/repo/</url>
-    </repository>
-  </repositories>
+    <modules>
+        <module>Core</module>
+        <module>WorldGuard-7</module>
+        <module>WarGear</module>
+    </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.destroystokyo.paper</groupId>
-      <artifactId>paper-api</artifactId>
-      <version>1.14.4-R0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
+    <properties>
+        <!-- Dependency Versions -->
+        <version.worldguard>7.0.2</version.worldguard>
+        <version.protocollib>4.4.0</version.protocollib>
 
-    <dependency>
-      <groupId>net.myplayplanet</groupId>
-      <artifactId>BlockGenerator</artifactId>
-      <version>1.14.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
+        <version.mockito>2.2.15</version.mockito>
+        <version.commons-io>2.5</version.commons-io>
+        <version.spigot-api>1.14.4-R0.1-SNAPSHOT</version.spigot-api>
 
-    <dependency>
-      <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>4.4.0</version>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Plugin Versions -->
+        <version.maven-shade-plugin>3.2.1</version.maven-shade-plugin>
+        <version.sonar-maven-plugin>3.4.1.1168</version.sonar-maven-plugin>
 
-    <dependency>
-      <groupId>com.sk89q.worldguard</groupId>
-      <artifactId>worldguard-core</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Setting -->
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.organization>pro-crafting</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
-    <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
-      <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
+    <repositories>
+        <!-- Needed for WarGear-Fight integration -->
+        <repository>
+            <id>pp-public</id>
+            <url>https://nexus.myplayplanet.net/repository/public/</url>
+        </repository>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>sk89q-repo</id>
+            <url>https://maven.enginehub.org/repo/</url>
+        </repository>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+        </repository>
+    </repositories>
 
-    <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldguard-api</artifactId>
-      <version>7.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>net.myplayplanet</groupId>
-      <artifactId>Regionslibrary</artifactId>
-      <version>0.1.4-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${version.maven-shade-plugin}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
