--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -9,6 +9,15 @@
 
     <artifactId>WorldFuscator-WorldGuard-7</artifactId>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <!-- Internal Dependencies -->
         <dependency>
