Allow to configure block filters A filter is either a specific material, a material + blockstate, or only the block states This allows for easier configuration and greater flexibility when setting up the plugin

--- a/Core/src/main/resources/config.yml
+++ b/Core/src/main/resources/config.yml
@@ -6,7 +6,6 @@ async:
   worker-count: 0
 preferred-obfuscation-material: 'minecraft:end_stone'
 hidden:
-  block-entities:
   block:
-    material:
-    block-data:
+    entities:
+    filter:
